removed cv.imshow()
removed these lines of code because they only work on local machine and aren't valid for running on cloud/ google Collab

--- a/CurrentYOLOTraining.ipynb
+++ b/CurrentYOLOTraining.ipynb
@@ -3619,16 +3619,12 @@
         "    gray = cv.resize(gray, None, fx = 3, fy = 3, interpolation = cv.INTER_CUBIC)\n",
         "    # perform gaussian blur to smoothen image\n",
         "    blur = cv.GaussianBlur(gray, (5,5), 0)\n",
-        "    #cv.imshow(\"Gray\", gray)\n",
-        "    #cv.waitKey(0)\n",
         "    # threshold the image using Otsus method to preprocess for tesseract\n",
         "    ret, thresh = cv.threshold(gray, 0, 255, cv.THRESH_OTSU | cv.THRESH_BINARY_INV)\n",
         "    \n",
         "    rect_kern = cv.getStructuringElement(cv.MORPH_RECT, (5,5))\n",
         "\n",
         "    dilation = cv.dilate(thresh, rect_kern, iterations = 1)\n",
-        "    #cv.imshow(\"Dilation\", dilation)\n",
-        "    #cv.waitKey(0)\n",
         "\n",
         "    text = pytesseract.image_to_string(img, config='-c tessedit_char_whitelist=0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ --psm 10 --oem 3')\n",
         "    display(Image.open(imageName))\n",
@@ -3681,7 +3677,7 @@
         "        roi = cv.bitwise_not(roi)\n",
         "        # perform another blur on character region\n",
         "        roi = cv.medianBlur(roi, 5)\n",
-        "        display(Image.fromarray(roi))\n",
+        "        #display(Image.fromarray(roi))\n",
         "        \n",
         "        try:\n",
         "            text = pytesseract.image_to_string(roi, config='-c tessedit_char_whitelist=0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ --psm 10 --oem 3')\n",
