added code to select where to run detect

--- a/CurrentYOLOTraining.ipynb
+++ b/CurrentYOLOTraining.ipynb
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -443,7 +443,54 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\requirements.txt not found, check failed.\n",
+            "\u001b[31m\u001b[1mrequirements:\u001b[0m C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\requirements.txt not found, check failed."
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\u001b[34m\u001b[1mdetect: \u001b[0mweights=['runs/train/exp/weights/best.pt'], source=c:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2/test/images, data=data\\coco128.yaml, imgsz=[640, 640], conf_thres=0.5, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs\\detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
+            "YOLOv5  fc753ca Python-3.11.1 torch-2.0.1+cpu CPU\n",
+            "\n",
+            "Fusing layers... \n",
+            "Model summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs\n",
+            "image 1/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars121_png.rf.164005aa7e0a199ab997a765934b921d.jpg: 640x640 2 licenses, 193.6ms\n",
+            "image 2/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars12_png.rf.f5cb0c21f6a1b6b75277d9bfe04529f2.jpg: 640x640 1 license, 189.0ms\n",
+            "image 3/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars146_png.rf.a2bcff563112777ba2327d3b489cfc29.jpg: 640x640 2 licenses, 180.7ms\n",
+            "image 4/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars151_png.rf.dc73e500f77582fa4d69c4bbc3a2152e.jpg: 640x640 1 license, 182.1ms\n",
+            "image 5/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars152_png.rf.9223459c9de567b4d130e29eb5283daa.jpg: 640x640 1 license, 184.6ms\n",
+            "image 6/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars154_png.rf.34555fa972c1c78cd42b143db9b330fc.jpg: 640x640 1 license, 180.3ms\n",
+            "image 7/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars163_png.rf.6d29e5bc56ed4d4a2288040b7945d4d9.jpg: 640x640 1 license, 182.6ms\n",
+            "image 8/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars164_png.rf.13ce428858e5b76d7a76ad191b3cf070.jpg: 640x640 1 license, 177.2ms\n",
+            "image 9/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars175_png.rf.0bb0afe7e3acd08c0d49a3d8422ba37e.jpg: 640x640 (no detections), 183.8ms\n",
+            "image 10/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars179_png.rf.e7eb6d35fb7b91153672b1a565fe3e26.jpg: 640x640 1 license, 177.4ms\n",
+            "image 11/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars193_png.rf.6081cff88d159932b20dcd0c3b0fff44.jpg: 640x640 1 license, 177.7ms\n",
+            "image 12/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars19_png.rf.f3d2698f8cdadbea43bf8e97be7940c2.jpg: 640x640 1 license, 181.0ms\n",
+            "image 13/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars1_png.rf.6510fc54e061b060da1f4c2c2f9727e6.jpg: 640x640 1 license, 184.8ms\n",
+            "image 14/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars221_png.rf.d5a7ba74bb031537c1834cb1e36cbf03.jpg: 640x640 (no detections), 185.7ms\n",
+            "image 15/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars228_png.rf.9ec5deb88d8b8a07b4193984e2149b97.jpg: 640x640 2 licenses, 178.4ms\n",
+            "image 16/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars275_png.rf.859df4fc18a8b6302eae199f1e880b25.jpg: 640x640 1 license, 197.0ms\n",
+            "image 17/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars309_png.rf.cdf5ce69196b2eb2dc8c1190fac945f8.jpg: 640x640 1 license, 187.5ms\n",
+            "image 18/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars329_png.rf.fcfc719f01dc8c2d4f68941392f85950.jpg: 640x640 1 license, 179.2ms\n",
+            "image 19/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars337_png.rf.b70543d1df573c03cea3214bce66f703.jpg: 640x640 (no detections), 177.5ms\n",
+            "image 20/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars365_png.rf.6a021c6c15361da102b7e280f8ea0de3.jpg: 640x640 1 license, 186.3ms\n",
+            "image 21/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars36_png.rf.4ce5b5067649eac547a00e20176ae271.jpg: 640x640 2 licenses, 177.5ms\n",
+            "image 22/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars413_png.rf.e23fd8c5ebabeb711b75f372a3dd53b6.jpg: 640x640 2 licenses, 185.0ms\n",
+            "image 23/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars422_png.rf.d0525b6df908a6475d83b2a290ad67c3.jpg: 640x640 1 license, 180.6ms\n",
+            "image 24/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars47_png.rf.6cf5d9a0ec2eee6cdbe110dcbf08f5d6.jpg: 640x640 2 licenses, 180.2ms\n",
+            "image 25/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars60_png.rf.a934c360938cc76ca595de98be117691.jpg: 640x640 1 license, 186.3ms\n",
+            "image 26/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars81_png.rf.99514c44035358750acba081684499a7.jpg: 640x640 2 licenses, 180.5ms\n",
+            "image 27/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars88_png.rf.d7cd1fae168d45dcad82d81494d72ee7.jpg: 640x640 1 license, 176.7ms\n",
+            "Speed: 0.8ms pre-process, 182.7ms inference, 1.1ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns\\detect\\exp9\u001b[0m\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
             "bounding box is  308 314 334 330\n",
             "class index is  tensor(0.)\n",
             "detected object name is  license\n",
@@ -569,49 +616,15 @@
             "detected object name is  license\n",
             "\n"
           ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\u001b[34m\u001b[1mdetect: \u001b[0mweights=['runs/train/exp/weights/best.pt'], source=c:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2/test/images, data=data\\coco128.yaml, imgsz=[640, 640], conf_thres=0.5, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs\\detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
-            "YOLOv5  fc753ca Python-3.11.1 torch-2.0.1+cpu CPU\n",
-            "\n",
-            "Fusing layers... \n",
-            "Model summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs\n",
-            "image 1/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars121_png.rf.164005aa7e0a199ab997a765934b921d.jpg: 640x640 2 licenses, 168.3ms\n",
-            "image 2/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars12_png.rf.f5cb0c21f6a1b6b75277d9bfe04529f2.jpg: 640x640 1 license, 164.8ms\n",
-            "image 3/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars146_png.rf.a2bcff563112777ba2327d3b489cfc29.jpg: 640x640 2 licenses, 160.6ms\n",
-            "image 4/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars151_png.rf.dc73e500f77582fa4d69c4bbc3a2152e.jpg: 640x640 1 license, 164.9ms\n",
-            "image 5/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars152_png.rf.9223459c9de567b4d130e29eb5283daa.jpg: 640x640 1 license, 160.6ms\n",
-            "image 6/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars154_png.rf.34555fa972c1c78cd42b143db9b330fc.jpg: 640x640 1 license, 159.7ms\n",
-            "image 7/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars163_png.rf.6d29e5bc56ed4d4a2288040b7945d4d9.jpg: 640x640 1 license, 164.1ms\n",
-            "image 8/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars164_png.rf.13ce428858e5b76d7a76ad191b3cf070.jpg: 640x640 1 license, 158.5ms\n",
-            "image 9/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars175_png.rf.0bb0afe7e3acd08c0d49a3d8422ba37e.jpg: 640x640 (no detections), 163.4ms\n",
-            "image 10/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars179_png.rf.e7eb6d35fb7b91153672b1a565fe3e26.jpg: 640x640 1 license, 158.3ms\n",
-            "image 11/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars193_png.rf.6081cff88d159932b20dcd0c3b0fff44.jpg: 640x640 1 license, 160.1ms\n",
-            "image 12/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars19_png.rf.f3d2698f8cdadbea43bf8e97be7940c2.jpg: 640x640 1 license, 161.2ms\n",
-            "image 13/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars1_png.rf.6510fc54e061b060da1f4c2c2f9727e6.jpg: 640x640 1 license, 161.9ms\n",
-            "image 14/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars221_png.rf.d5a7ba74bb031537c1834cb1e36cbf03.jpg: 640x640 (no detections), 158.6ms\n",
-            "image 15/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars228_png.rf.9ec5deb88d8b8a07b4193984e2149b97.jpg: 640x640 2 licenses, 163.5ms\n",
-            "image 16/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars275_png.rf.859df4fc18a8b6302eae199f1e880b25.jpg: 640x640 1 license, 161.5ms\n",
-            "image 17/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars309_png.rf.cdf5ce69196b2eb2dc8c1190fac945f8.jpg: 640x640 1 license, 153.6ms\n",
-            "image 18/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars329_png.rf.fcfc719f01dc8c2d4f68941392f85950.jpg: 640x640 1 license, 165.5ms\n",
-            "image 19/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars337_png.rf.b70543d1df573c03cea3214bce66f703.jpg: 640x640 (no detections), 167.4ms\n",
-            "image 20/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars365_png.rf.6a021c6c15361da102b7e280f8ea0de3.jpg: 640x640 1 license, 159.5ms\n",
-            "image 21/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars36_png.rf.4ce5b5067649eac547a00e20176ae271.jpg: 640x640 2 licenses, 162.1ms\n",
-            "image 22/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars413_png.rf.e23fd8c5ebabeb711b75f372a3dd53b6.jpg: 640x640 2 licenses, 164.6ms\n",
-            "image 23/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars422_png.rf.d0525b6df908a6475d83b2a290ad67c3.jpg: 640x640 1 license, 162.2ms\n",
-            "image 24/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars47_png.rf.6cf5d9a0ec2eee6cdbe110dcbf08f5d6.jpg: 640x640 2 licenses, 167.6ms\n",
-            "image 25/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars60_png.rf.a934c360938cc76ca595de98be117691.jpg: 640x640 1 license, 167.0ms\n",
-            "image 26/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars81_png.rf.99514c44035358750acba081684499a7.jpg: 640x640 2 licenses, 159.2ms\n",
-            "image 27/27 C:\\Users\\gvina\\OneDrive\\Documents\\GitHub\\MLProject\\datasets\\MLProject-2\\test\\images\\Cars88_png.rf.d7cd1fae168d45dcad82d81494d72ee7.jpg: 640x640 1 license, 160.5ms\n",
-            "Speed: 0.8ms pre-process, 162.2ms inference, 0.8ms NMS per image at shape (1, 3, 640, 640)\n",
-            "Results saved to \u001b[1mruns\\detect\\exp8\u001b[0m\n"
-          ]
         }
       ],
       "source": [
+        "import glob\n",
+        "\n",
+        "for imageName in glob.glob('../images/*.png'):\n",
+        "    os.remove(imageName)\n",
+        "\n",
+        "os.rmdir(\"../images\")\n",
         "!python detect.py --weights runs/train/exp/weights/best.pt --img 640 --conf 0.5 --source {dataset.location}/test/images "
       ]
     },
